crates/analyzer/tests/snapshots/errors__enum_return_from_public_contract_fn.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: can't return enum type from public contract function
  ┌─ compile_errors/enum_return_from_public_contract_fn.fe:7:36
  │
7 │     pub fn bar(x: i32, y: u256) -> MyEnum {
  │                                    ^^^^^^ can't return `MyEnum` here


